	breaks inside of large lines.

2009-04-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/mp_clz_tab.c: New file.

2009-03-17  Ryan S. Arnold  <rsa@us.ibm.com>
            Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/fallocate.c: Handle old kernel headers.
	* sysdeps/unix/sysv/linux/fallocate64.c: Likewise.

2009-03-25  Andrew Stubbs  <ams@codesourcery.com>

	* sysdeps/sh/libc-tls.c: New file.

	* sysdeps/sh/bits/setjmp.h (__jmp_buf): Give name to structure type.

2009-04-14  Roland McGrath  <roland@redhat.com>

	* elf/elf.h: Add various missing ARM constants, to match binutils.

2009-04-14  Ulrich Drepper  <drepper@redhat.com>

	Optimizations from GMP.
	* sysdeps/x86_64/add_n.S: New file.
	* sysdeps/x86_64/addmul_1.S: New file.
	* sysdeps/x86_64/lshift.S: New file.
	* sysdeps/x86_64/mul_1.S: New file.
	* sysdeps/x86_64/rshift.S: New file.
	* sysdeps/x86_64/sub_n.S: New file.
	* sysdeps/x86_64/submul_1.S: New file.

2009-04-14  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/powerpc/powerpc32/elf/start.S: Ensure .data is non-empty.
	* sysdeps/powerpc/powerpc64/elf/start.S: Likewise.
	* sysdeps/sparc/sparc32/elf/start.S: Likewise.
	* sysdeps/sparc/sparc64/elf/start.S: Likewise.

2009-04-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/kernel-features.h: SH also has
	preadv/pwritev.

2009-04-13  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86-64/strrchr.S: New file.

2009-04-10  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/printf.h (struct printf_info): Add user element.
	New types printf_arginfo_size_function, printf_va_arg_function.
	Declare register_printf_specifier, register_printf_modifier,
	register_printf_type.
	* stdio-common/printf-parse.h (struct printf_spec): Add size element.
	(union printf_arg): Add pa_user element.
	Adjust __printf_arginfo_table type.
	Add __printf_va_arg_table, __printf_modifier_table,
	__handle_registered_modifier_mb, and __handle_registered_modifier_wc
	declarations.